<resources>
    <string name="app_name">QuizMania</string>
    <string name="txt_img">Logo de la App</string>
    <string name="txt_bienvenido_a_quizmania">¡Bienvenidos a QuizMania!</string>
    <string name="txt_listo_para_poner_a_prueba_tus_conocimientos">¿Listo para poner a prueba tus conocimientos?</string>
    <string name="btn_iniciar">Iniciar</string>
    <string name="btn_mis_estad_sticas">Mis Estadísticas</string>
    <string name="btn_acerca_de_nosotros">Acerca de nosotros :)</string>
    <string name="txt_salir">Salir</string>
    <string name="img_logo">Logo</string>
    <string name="txt_pregunta">Pregunta</string>
    <string name="txt_banner_pregunta">Banner pregunta</string>
    <string name="btn_rendirse">Rendirse</string>
    <string name="txt_selec_una_categoria">Seleccione una categoría</string>
    <string name="txt_atras">Atrás</string>
    <string name="txt_seleccione_la_dificultad">Seleccione la dificultad</string>
    <string name="txt_facil">Fácil</string>
    <string name="txt_medio">Medio</string>
    <string name="txt_dificil">Difícil</string>
    <string name="txt_modo_normal">Modo Normal</string>
    <string name="txt_modo_harry_potter">Modo Harry Potter</string>
    <string name="txt_pregunta_ejemplo">¿En qué año cayó el Muro de Berlín?</string>
    <string name="txt_selecciona_opcion">Selecciona una opción</string>
    <string name="texto_acerda_de">Somos un grupo de estudiantes de la Universidad Católica de El Salvador (UNICAES), que hemos creado QuizMania, una aplicación diseñada para poner a prueba tus conocimientos en diversas categorías. Nuestro objetivo es ofrecerte una experiencia divertida y educativa a través de un juego interactivo. ¡Esperamos que disfrutes jugando y aprendiendo con nosotros!</string>
    <string name="tiempo">Seleccione el tiempo que quiere para cada pregunta</string>
    <string name="treintaseg">30 segundos</string>
    <string name="veinteseg">20 segundos</string>
    <string name="diezseg">10 segundos</string>
    <string name="cincoseg">5 segundos</string>
    <string name="iniciarTemporizador">00:00</string>
    <string name="txt_seleccione_el_modo_de_juego">Seleccione el modo de juego</string>

    <string name="modo_normal">Normal</string>
    <string name="modo_harry_potter">Harry Potter</string>
    <string name="modo_aleatorio">Aleatorio</string>
    <string name="modo_cronometrado">Temporizador</string>


    <string name="cat_historia">Historia</string>
    <string name="cat_ciencia">Ciencia</string>
    <string name="cat_geografia">Geografía</string>
    <string name="cat_arte">Arte</string>
    <string name="cat_literatura">Literatura</string>
    <string name="cat_cine">Cine</string>
    <string name="cat_musica">Música</string>
    <string name="cat_actualidad">Actualidad</string>
    <string name="cat_harry_potter">Harry Potter</string>
    <string name="txt_est_s_listo">¿Estás listo?</string>
    <string name="txt_mixto">Mixto</string>
    <string name="txt_mis_estad_sticas">Mis Estadísticas</string>
    <string name="txt_mi_top_3_de_mejores_puntajes">Mi top 3 de mejores puntajes</string>
    <string name="txt_mi_top_1">Mi top 1</string>
    <string name="txt_mi_top_2">Mi top 2</string>
    <string name="txt_mi_top_3">Mi top 3</string>
    <string name="txt_historial_de_puntajes">Historial de puntajes</string>
    <string name="txt_modo_de_juego">Modo de juego:</string>
    <string name="txt_categor_a">Categoría:</string>
    <string name="txt_dificultad">Dificultad:</string>
    <string name="txt_fecha">Fecha:</string>
    <string name="txt_puntuaci_n">Puntuación:</string>
    <string name="txt_est_s_seguro_que_se_deseas_rendirte">¿Estás seguro que se deseas rendirte?</string>
    <string name="txt_no">No</string>
    <string name="txt_s">Sí</string>
    <string name="txt_resultado">Resultado</string>
    <string name="btn_continuar">Continuar</string>
    <string name="txt_respuesta_correcta">¡Respuesta Correcta!</string>
    <string name="txt_respuesta_incorrecta">Respuesta Incorrecta</string>
    <string name="txt_la_respuesta_correcta_era">"La respuesta correcta era: "</string>
    <string name="txt_puntos_obtenidos">"\n\nPuntos obtenidos: "</string>
    <string name="head_puntos_obtenidos">Puntos Obtenidos</string>
    <string name="txt_puntuaci_n_acumulada">Puntuación acumulada</string>
    <string name="txt_preguntas_n_correctas">Preguntas \n Correctas:</string>
    <string name="txt_preguntas_incorrectas">Preguntas Incorrectas:</string>
    <string name="txt_puntuaci_n_total_final">Puntuación Total Final:</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="txt_bien_jugado">¡Bien Jugado!</string>
    <string name="txt_buen_intento">¡Buen intento!</string>
    <string name="txt_nada_mal">¡Nada mal!</string>
    <string name="txt_sin_comentarios">Sin comentarios…</string>
    <string name="noti_tiempo_agotado">¡Tiempo agotado!</string>


</resources>