<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:fontFamily="@font/montserrat_regular"
    android:background="@drawable/btn_style_d"
    android:backgroundTint="@null"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/txtModo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_modo_de_juego"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_categor_a" />

    <TextView
        android:id="@+id/txtDificultad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dificultad" />

    <TextView
        android:id="@+id/txtFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fecha" />

    <TextView
        android:id="@+id/txtPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_puntuaci_n" />
</LinearLayout>
