<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".MisEstadisticas">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:contentDescription="@string/txt_banner_pregunta"
                app:srcCompat="@drawable/banner_estadisticas" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_mis_estad_sticas"
                android:textSize="24sp" />

            <TextView
                android:text="@string/txt_mi_top_3_de_mejores_puntajes"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="15sp"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/top1"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/txt_mi_top_1"
                    android:fontFamily="@font/montserrat_regular"
                    android:background="@drawable/btn_style_a"
                    android:backgroundTint="@null"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/top2"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/txt_mi_top_2"
                    android:fontFamily="@font/montserrat_regular"
                    android:background="@drawable/btn_style_b"
                    android:backgroundTint="@null"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/top3"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/txt_mi_top_3"
                    android:fontFamily="@font/montserrat_regular"
                    android:background="@drawable/btn_style_c"
                    android:backgroundTint="@null"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:text="@string/txt_historial_de_puntajes"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="15sp"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerHistorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="true"
                android:gravity="center_horizontal"/>

            <Button
                android:layout_width="175dp"
                android:layout_height="49dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_style_rendirse"
                android:fontFamily="@font/montserrat_bold"
                android:onClick="btnMenuPrincipal"
                android:text="@string/txt_atras"
                android:textColor="@color/white"
                android:textSize="15sp"
                app:backgroundTint="@null"
                android:layout_gravity="center_horizontal"/>



        </LinearLayout>


    </LinearLayout>


</ScrollView>