<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".Modo_Cronometrado">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="15dp"
                android:onClick="home"
                android:layout_gravity="start"
                app:srcCompat="@drawable/home_icon"
                tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />

            <!-- Encabezado -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="bottom"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/tiempo" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="133dp"
                    android:contentDescription="@string/txt_banner_pregunta"
                    app:srcCompat="@drawable/banner_tempo"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="30dp"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#4EE6B3"
                    android:drawableEnd="@drawable/signo_mas_white"
                    android:fontFamily="@font/montserrat_bold"
                    android:onClick="treintaSegundos"
                    android:text="@string/treintaseg"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#ffcc00"
                    android:drawableEnd="@drawable/cuadrado_white"
                    android:fontFamily="@font/montserrat_bold"
                    android:onClick="VeinteSegundos"
                    android:text="@string/veinteseg"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#00a2e9"
                    android:drawableEnd="@drawable/circulo_white"
                    android:fontFamily="@font/montserrat_bold"
                    android:onClick="DiezSegundos"
                    android:text="@string/diezseg"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ff3399"
                    android:drawableEnd="@drawable/triangulo_white"
                    android:fontFamily="@font/montserrat_bold"
                    android:onClick="CincoSegundos"
                    android:text="@string/cincoseg"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnAtras"
                android:layout_width="150dp"
                android:layout_height="49dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_atras"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:background="@drawable/btn_style_rendirse"
                android:textColor="@color/white"
                app:backgroundTint="@null"
                android:onClick="volverAModoJuego" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>