<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        tools:context=".PuntajePregunta">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:contentDescription="@string/txt_banner_pregunta"
                app:srcCompat="@drawable/banner_puntaje"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginBottom="20dp"
                android:text="@string/head_puntos_obtenidos"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/txt_puntuaci_n_acumulada"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tvPuntaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="80"
                android:background="@drawable/box_style_pregunta"
                app:backgroundTint="@null"
                tools:ignore="HardcodedText" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="400dp">
                <Button
                    android:layout_width="150dp"
                    android:layout_height="49dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/btn_rendirse"
                    android:textSize="15sp"
                    android:background="@drawable/btn_style_rendirse"
                    android:textColor="@color/white"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:onClick="btnRendirse"/>
                <Button
                    android:layout_width="150dp"
                    android:layout_height="49dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/btn_continuar"
                    android:textSize="15sp"
                    android:background="@drawable/btn_style_seguir"
                    android:textColor="@color/white"
                    app:backgroundTint="@null"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:onClick="btnContinuar"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>



    </LinearLayout>



</ScrollView>
